style.css
/* ... */
@keyframes upAndDown {
  from {
    transform: translateY(0);
  }

  to {
    transform: translateY(-8px);
  }
}

#opponentList a::after {
  content: "click!";
  display: block;
  text-align: center;
  color: var(--primary-dark);
  pointer-events: none;
  position: absolute;
  top: 68px;
  opacity: 0;
  animation: blink 1s steps(2, jump-none) infinite;
  animation-delay: 5s;
}

@keyframes blink {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

#opponentList > * {
  background-color: var(--light-background);
  position: relative;
  z-index: 30;
  display: flex;
  width: 64px;
  height: 64px;
  margin: 24px 48px;
  border: 3px solid var(--border);
  justify-content: center;
  align-items: center;
  border-radius: 50%;
}

#opponentList > div:not(.prev) {
  filter: grayscale(1) brightness(0.5);
}

#opponentList > div:not(.prev) .sprite {
  filter: contrast(0) brightness(0.5);
}

#opponentList .sprite {
  transform: scale(3);
  transform-origin: center !important;
}

/* ================= */
/* ================= */
/* Battle */
/* ================= */
/* ================= */

.scene {
  flex-grow: 1;
  position: relative;
  transform-style: preserve-3d;
  perspective: 400px;
  overflow: hidden;
  --dark-amount: 100%;
}

.scene:after {
  content: "";
  display: block;
  background: radial-gradient(
    circle at center 310px,
    transparent 10%,
    rgba(0, 0, 0, 0.9) var(--dark-amount)
  );
  position: absolute;
  pointer-events: none;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0px;
  z-index: 20;
  transform: translateZ(40px);
}

.scene .shelf {
  overflow: visible;
  position: absolute;
  pointer-events: none;
  transform: scale(2);
  transform-origin: top left;
  z-index: 0;
}

.scene .sprite.reversed {
  transform: scale(-2, 2) translateX(-17px);
}

.scene .shelf::after {
  content: "";
  display: block;
  width: 100%;
  height: 8px;
  position: absolute;
  bottom: -8px;
  border: 1px solid var(--border);
  background-color: var(--light-background);
  box-shadow: inset 1px 1px 0 var(--shadow), inset -1px -1px 0 var(--shadow);
}

.scene .character {
  transform: scale(4);
  transform-origin: bottom center;
  position: absolute;
  left: 24%;
  top: 83%;
}

.character {
  animation: spriteAnimation 1s steps(2) infinite;
}

#playerScene {
  transform: scale(-4, 4);
}

#opponentScene {
  left: 75%;
}

#floorCanvas {
  position: absolute;
  bottom: 0;
  left: -48px;
  z-index: 0;
  transform: rotateX(50deg);
}

.footer {
  color: var(--primary-light);
  background-color: var(--secondary-dark);
  height: 300px;
  box-sizing: border-box;
  padding: 8px 0;
  display: flex;
  align-items: stretch;
  justify-content: stretch;
  flex-shrink: 0;
  position: relative;
  margin-top: auto;
}

.footerInner {
  border-top: 2px solid var(--primary-light);
  border-bottom: 2px solid var(--primary-light);
  width: 100%;
  display: flex;
  gap: 8px;
  align-items: center;
  box-sizing: border-box;
  padding: 8px;
  overflow: hidden;
}

.column {
  flex-direction: column;
}

#hand {
  height: 100%;
  gap: 8px;
  justify-content: flex-start;
  display: flex;
  align-items: center;
  box-sizing: border-box;
  margin: auto;
}

/* ================= */
/* ================= */
/* Sprites images */
/* ================= */
/* ================= */

.sprite,
#cauldronScene::after {
  --x: 0;
  --y: 0;
  display: inline-block;
  width: 16px;
  height: 16px;
  background-image: url(./images/sprites.png);
  color: transparent;
  overflow: hidden;
  background-position: var(--x) var(--y);
}

.sprite.spider,
.ssp::before,
.isp::before,
.ps::before,
.es::before,
.ssp::after,
.isp::after,
.ps::after,
.es::after {
  --x: 0;
  --y: 0;
}

.sprite.apple,
.sap::before,
.iap::before,
.pa::before,
.ea::before,
.sap::after,
.iap::after,
.pa::after,
.ea::after {
  --x: -16px;
  --y: 0;
}

.sprite.bat,
.sbp::before,
.ibp::before,
.pb::before,
.eb::before,
.sbp::after,
.ibp::after,
.pb::after,
.eb::after {
  --x: -32px;
  --y: 0;
}

.sprite.worm,
.swp::before,
.iwp::before,
.pw::before,
.ew::before,
.swp::after,
.iwp::after,
.pw::after,
.ew::after {
  --x: -48px;
  --y: 0;
}

.sprite.fly,
.sfp::before,
.ifp::before,
.pf::before,
.ef::before,
.sfp::after,
.ifp::after,
.pf::after,
.ef::after {
  --x: 0;
  --y: -16px;
}

.sprite.berry,
.syp::before,
.iyp::before,
.py::before,
.ey::before,
.syp::after,
.iyp::after,
.py::after,
.ey::after {
  --x: -16px;
  --y: -16px;
}

.sprite.skull,
.sprite.pw,
.sprite.pf,
.sprite.pb,
.sprite.ps,
.sprite.pa,
.sprite.py {
  --x: -32px;
  --y: -16px;
}

.sprite.cauldron {
  width: 32px;
  height: 32px;
  --x: 0;
  --y: -32px;
}

.sprite.fatPotion,
.sprite.swp,
.sprite.sfp,
.sprite.sbp,
.sprite.ssp,
.sprite.sap,
.sprite.syp {
  --x: -48px;
  --y: -16px;
}

.sprite.fitPotion,
.sprite.iwp,
.sprite.ifp,
.sprite.ibp,
.sprite.isp,
.sprite.iap,
.sprite.iyp {
  --x: 0;
  --y: -64px;
}

.sprite.books {
  --x: -16px;
  --y: -64px;
}

.sprite.flower {
  --x: -32px;
  --y: -64px;
}

.sprite.meat {
  --x: -48px;
  --y: -64px;
}

.sprite.brain {
  --x: -32px;
  --y: -112px;
}

.sprite.ok,
.sprite.ew,
.sprite.ef,
.sprite.eb,
.sprite.es,
.sprite.ea,
.sprite.ey {
  --x: -48px;
  --y: -112px;
}

.sprite.totter {
  --x: 0;
  --y: -96px;
  --target-x: -32px;
  --target-y: -96px;
}

.sprite.old {
  --x: 0;
  --y: -80px;
  --target-x: -32px;
  --target-y: -80px;
}

.sprite.haste {
  --x: -32px;
  --y: -80px;
  --target-x: -64px;
  --target-y: -80px;
}

.sprite.boast {
  --x: -32px;
  --y: -96px;
  --target-x: -64px;
  --target-y: -96px;
}

.sprite.cough {
  --x: 0;
  --y: -112px;
  --target-x: -32px;
  --target-y: -112px;
}

@keyframes spriteAnimation {
  from {
    background-position: var(--x) var(--y);
  }

  to {
    background-position: var(--target-x) var(--target-y);
  }
}
/* ... */

